# JAX-ENT

./: .gitignore  CLAUDE.md  COMPUTATIONAL_GRAPH_REPORT.md  EXAMPLES.md  GEMINI.md  LICENSE  PROFILING.md  PROFILING_SUMMARY.txt  README.md  RUNTIME_CONFIG.md  analyze_beartype.py  beartype_analysis.txt  beartype_warnings_detailed.txt  combine_SAXS_features.py  debug_ls.py  jaxtyping_chex_plan.md  profile_optimization.py  profile_runtime_jax.py  pyproject.toml  pytest_out.txt  pytest_out_fixed.txt  setup_test.sh  smoke_test_common_v2.py  test_profile.py
.pyscn/reports/: analyze_20260122_163650.html  analyze_20260122_164923.html
MoPrP_analysis_clusters4/clusters/: frame_to_cluster.csv
cross_experiment_analysis/: full_coefficients_CV.csv  full_coefficients_Mean_Recovery.csv  full_coefficients_Minimax.csv  full_coefficients_Regret.csv  mixed_model_summary_CV.txt  mixed_model_summary_Mean_Recovery.txt  mixed_model_summary_Minimax.txt  mixed_model_summary_Regret.txt
cross_experiment_analysis/CV/: random_effects_blups.csv
cross_experiment_analysis/Mean_Recovery/: random_effects_blups.csv
cross_experiment_analysis/Minimax/: random_effects_blups.csv
cross_experiment_analysis/Regret/: random_effects_blups.csv
ensemble_analysis_results/BV_standard/: metrics_data.npy
ensemble_analysis_results/netHDX_2/: metrics_data.npy
ensemble_analysis_results/netHDX_excl0/: metrics_data.npy
ensemble_analysis_results/netHDX_excl1/: metrics_data.npy
ensemble_analysis_results/netHDX_excl2/: metrics_data.npy
ensemble_analysis_results/netHDX_standard/: metrics_data.npy
jaxent/: __init__.py  __main__.py  core_types.py  data_split.py  datatypes.py  featurise.py  optimise.py
jaxent/cli/: README.md  efficient_k_cluster.py  featurise.py  forward.py  ipca.py  predict.py
jaxent/config/: base.py  path.py
jaxent/data/: loader.py  loading.py
jaxent/examples/: LLM.md
jaxent/features/: contacts.py  netHDX.py
jaxent/forwardmodels/: base.py  featurisers.py  functions.py  mdtraj_functions.py  models.py  netHDX_functions.py
jaxent/interfaces/: base.py  builder.py  builider.py  features.py  model.py  simulation.py  topology.py
jaxent/lossfn/: base.py
jaxent/models/: common.py  config.py  core.py
jaxent/opt/: base.py  batch.py  losses.py  optimiser.py  run.py
jaxent/optimise/: base.py  losses  optimiser.py
jaxent/scripts/: README.md  featurise.py  optimise.py
jaxent/src/: __init__.py  analysis.py  data_split.py  featurise.py  predict.py  predict_forward.py
jaxent/tests/: conftest.py  test_utils.py
jaxent/types/: HDX.py  __init__.py  base.py  config.py  features.py  key.py  topology.py
jaxent/utils/: datasplitter.py  hdf.py  jax.py  jax_fn.py
notebooks/AutoValidation/: HDXer_InterpretDIR_AutoValidation_TeaA.py  VALDXer_InterpretDIR_AutoValidation_TeaA.py  complete_synthetic_data_TeaA.py  get_HDXer_AutoValidation_data.py  jaxENT_AX_QuickTrial_run_TeaA.py  jaxENT_addUptake_noise.py  jaxENT_interpretDIR_QuickAutoValidation_TeaA.py  jaxENT_interpret_QuickAutoValidation_TeaA.py  jaxENT_interpret_multiDIR_QuickAutoValidation_TeaA.py  jaxENT_meanCentering.py  jaxENT_prepare_TeaA_data.py  jaxENT_run_AutoValidation_L2FWConsistency_TeaA.py  jaxENT_run_AutoValidation_L2MaxENT_MAE_TeaA.py  jaxENT_run_AutoValidation_L2MaxENT_TeaA.py  jaxENT_run_AutoValidation_L2_FW_MaxENT_TeaA.py  jaxENT_run_AutoValidation_L2only_TeaA.py  jaxENT_run_AutoValidation_MSEonly_TeaA.py  jaxENT_run_AutoValidation_MSEonly_TeaA_convergence_noise.py  jaxENT_run_AutoValidation_MSEonly_TeaA_convergence_noise_FULL.py  jaxENT_run_AutoValidation_mcMSEMaxENTFW_TeaA.py  jaxENT_run_AutoValidation_mcMSEMaxENTL2_TeaA.py  jaxENT_run_AutoValidation_mcMSEMaxENT_TeaA.py  jaxENT_run_AutoValidation_mcMSEonly_TeaA.py  jaxENT_run_AutoValidation_mcMSEonly_TeaA_convergence.py  jaxENT_run_AutoValidation_mcMSEonly_TeaA_convergence_noise.py  jaxENT_run_AutoValidation_mcMSEonly_TeaA_convergence_noise_FULL.py  jaxENT_test_AutoValidation_datasplitting.py  (+1 more)
plans/: REFACTOR_EXAMPLES_PLAN.md  SAXS_XLMS_integration.md  VERIFICATION_FINDINGS.md  code_review.md  hdx_effective_rate_variance_physics.md  hdx_heteroscedastic_nll_investigation.md  implementation_plan.md  known_population_covariance_recovery.md  phase2_plan.md
profiling/: optimise_perf_metrics.py  optimise_perf_probe.py
tests/: test_datasplitting.py  test_featurise_netHDX.py  test_forwardmodel.py  test_forwardmodel_mdtraj.py  test_gpu.py  test_netHDX_forwardmodel.py  test_run_featurise.py  test_run_optimise.py  test_run_optimise_forward_models.py  test_visualise_netHDX.py
(+1955 files in other folders)
