[project]
name = "jaxent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "alexisiddiqui", email = "alexisiddiqui831@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "hdxrate>=0.2.2",
    "icecream>=2.1.4",
    "jax[cuda12]==0.4.35",
    "matplotlib>=3.10.0",
    "mdanalysis>=2.8.0",
    "networkx[default]>=3.4.2",
    "numpy>=2.2.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mdtraj>=1.10.2",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]


[[tool.mypy.overrides]]
module = "MDAnalysis,tqdm,networkx"
ignore_missing_imports = true
