[project]
name = "jaxent"
version = "0.4.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "alexisiddiqui", email = "alexisiddiqui831@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "beartype>=0.22.9",
    "chex>=0.1.88",
    "h5py>=3.14.0",
    "hdxrate>=0.2.2",
    "icecream>=2.1.4",
    "jax==0.4.35",
    "jaxtyping>=0.2.37",
    "matplotlib>=3.10.0",
    "mdakit-sasa",
    "MDAnalysis>=2.8.0",
    "networkx[default]>=3.4.2",
    "numpy>=2.2.1",
    "optax>=0.2.4",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
[project.scripts]
jaxent-featurise = "jaxent.cli.featurise:main"
jaxent-predict = "jaxent.cli.predict:main"
jaxent-forward = "jaxent.cli.forward:main"
jaxent-kCluster = "jaxent.cli.efficient_k_cluster:main"

[tool.pytest.ini_options]
testpaths = [
    "jaxent/tests",
]
pythonpath = [
    "jaxent/src"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ============================================================================
# HATCHLING BUILD CONFIGURATION
# ============================================================================

[tool.hatch.build.targets.wheel]
# Include the jaxent package with all submodules
packages = ["jaxent"]

# Exclude directories that should not be packaged
exclude = [
    # Test and development directories
    "jaxent/tests",
    "jaxent/tests/**",
    "jaxent/dev",
    "jaxent/dev/**",
    "jaxent/deprecated",
    "jaxent/deprecated/**",
    "jaxent/scripts",
    "jaxent/scripts/**",
    # Python cache and build artifacts (also in .gitignore)
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
    "**/.DS_Store",
]

[tool.hatch.build.targets.sdist]
# Source distribution includes everything except build artifacts
exclude = [
    # Build artifacts and caches
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
    "**/.DS_Store",
    "*.egg-info",
    "dist/",
    "build/",
    ".git/",
    ".github/",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mdtraj>=1.10.2",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]
test = [
    "pytest>=8.3.4",
]


[[tool.mypy.overrides]]
module = "MDAnalysis,tqdm,networkx"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
include = ["jaxent/**/*.py"]
exclude = ["jaxent/examples/**", "jaxent/docs/**","jaxent/dev/**", "jaxent/deprecated/**"]

[tool.ruff.lint]
ignore = ["E402"]

[tool.uv.sources]
mdakit-sasa = { git = "https://github.com/pegerto/mdakit_sasa.git" }
